[package]
name = "tuner-toy-project"
description = "toy project to experiment with rust-wasm"
license = "MIT"
version = "0.1.0"
authors = ["Lennart K <18233294+lennart-k@users.noreply.github.com>"]
repository = "https://github.com/lennart-k/tuner-toy-project"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.61"
rustfft = "6.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
